tests/analyzer/errors/fn_call.rv
fn add(arg1: str) {}
fn sub(arg1: float, args2: bool) {}

struct Foo {
    fn staticFn(a: int) {}
    fn method(self, a=1) {}
}

fn defaults(a: int, b=2) {}

fn callFoo(f: Foo) {}

fn main() {
    add(1)
    add(1, 2)
    sub(4.5)
    var a = add("hoy")

    var foo = Foo{}
    var bound = foo.method
    bound()

    foo.staticFn(5)
    Foo.method()

    defaults(a=1, a=2)

    callFoo(Foo)
}
